[project]
name = "rift-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "einops>=0.8.1",
    "gradio>=5.49.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.3.3",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "praat-parselmouth>=0.4.6",
    "pyloudnorm>=0.1.1",
    "pyworld>=0.3.5",
    "resampy>=0.4.3",
    "schedulefree>=1.4.1",
    "soundfile>=0.13.1",
    "tensorboardx>=2.6.4",
    "thop>=0.1.1.post2209072238",
    "tokenizers>=0.22",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "wandb>=0.22.3",
    "x-transformers>=2.10.2",
]


[tool.uv.sources]
torch = [
  {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchaudio = [
  {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
